Revert "REPO-4969: Prepare branches for the 6.2.1 release (former 6.3) (#836)"
This reverts commit b6a99dbba820a3c6cb52a5bcff5b7990f5257931.